syntax = "proto3";

package com.proto.customer;

option java_multiple_files = true;
option java_package = "com.example.customer";

 
service CustomerService {
  rpc getByName(GetByNameRequest) returns(GetByNameResponse){};
}
 
  message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string phone_number = 5;
    repeated string policy_name = 6;
    repeated string policy_id = 7;
  }


  message GetByNameRequest{
    string name = 1;
  }
  
  message GetByNameResponse{
    Customer customer = 1;
  }
  
